--- a/COM_2305/66143432/Work/5.html
+++ b/COM_2305/66143432/Work/5.html
@@ -6,3 +6,8 @@
          งานอดิเรก เล่นเกม เล่นกีฬา 
 
 </body>
+
+<div class="container">
+    <h1> Home </h1>
+    <a href="8-Homepage.html"> Click </a>
+</div>
