--- a/COM_2305/66143432/Web/form_1.html
+++ b/COM_2305/66143432/Web/form_1.html
@@ -26,7 +26,7 @@
     <br>
 
 
-    <form method="get" action="" name="Form1" >
+    <form method="post" action="" name="Form1" >
         User <input type="text" name="user" placeholder="4-8" size="8" size="10" maxlength="8" value="123456" disabled> <br>
         <br>
     
