--- a/COM_2305/66143432/Web/form_2.htm
+++ b/COM_2305/66143432/Web/form_2.htm
@@ -37,7 +37,11 @@
             <option value="cr"> เชียงราย </option>
             <option value="lp"> ลำพูน </option>
 
-            </select>
+            </select><br><br>
+
+        <input type="reset" name="a1" value="ยกเลิก">
+
+        <input type="submit" name="a2" value="ตกลง">
 
 
 </body>
