--- a/COM_2305/Web_Com2305/Web/link_1.html
+++ b/COM_2305/Web_Com2305/Web/link_1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <a href="#1"> รวม 12 บทความให้กำลังใจ </a> 
+    <a href="#1"> รวม 12 บทความให้กำลังใจ </a> <br><br>
 
     <a href="#2"> ย่อหน้าที่ 1 </a>  <br>
     <a href="#3"> ย่อหน้าที่ 2 </a> <br>
